# lecture

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: ci.yml
migrations/2024-01-21-115027_users/: down.sql  up.sql
src/: commands.rs  db.rs  main.rs  models.rs  schema.rs  states.rs
