[package]
name = "lecture"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }